@@ -1,5 +1,5 @@
 /*
- * $Id: dns_cache.h,v 1.8 2008/02/11 09:58:29 tirpi Exp $
+ * $Id: dns_cache.h,v 1.9 2008/02/11 17:11:59 tirpi Exp $
  *
  * resolver/dns related functions, dns cache and failover
  *
@@ -180,6 +180,7 @@ const char* dns_strerror(int err);
 
 void fix_dns_flags(str *name);
 int use_dns_failover_fixup(void *handle, str *name, void **val);
+int use_dns_cache_fixup(void *handle, str *name, void **val);
 int dns_cache_max_mem_fixup(void *handle, str *name, void **val);
 int init_dns_cache();
 #ifdef USE_DNS_CACHE_STATS
