@@ -1,4 +1,4 @@
-# $Id: dns.txt,v 1.5 2007/10/12 22:25:40 mma Exp $
+# $Id: dns.txt,v 1.6 2008/02/11 17:12:00 tirpi Exp $
 #
 # History:
 # --------
@@ -258,6 +258,9 @@ DNS Cache and Failover Config Variables
       ones. The last-recently used entries are deleted first.
       Default: no
 
+   dns_cache_init = on | off - if off, the dns cache is not initialized
+      at startup and cannot be enabled runtime, that saves some memory.
+      Default: on
 
 DNS Cache Compile Options
 
