@@ -1,4 +1,4 @@
-# $Id: dst_blacklist.txt,v 1.2 2006/09/19 16:13:28 andrei Exp $
+# $Id: dst_blacklist.txt,v 1.3 2008/02/11 17:12:00 tirpi Exp $
 #
 # History:
 # --------
@@ -55,6 +55,9 @@ Config Variables
  dst_blacklist_gc_interval = time in s (default 60 s) - how often the 
   garbage collection will run (eliminating old, expired entries).
 
+ dst_blacklist_init = on | off (default on) - if off, the blacklist
+  is not initialized at startup and cannot be enabled runtime,
+  that saves some memory.
 
 Compile Options
 
